# cache-service

./: .editorconfig  BUILD.bazel  Makefile  Procfile  README.md  WORKSPACE  buf.yaml  go.mod  go.sum  main.go
.github/workflows/: build.yaml  release.yaml
api/: cache.pb.go  cache.pb.micro.go
cache/: BUILD.bazel  handler.go
internal/cache/: BUILD.bazel  handler.go
proto/cache/: BUILD.bazel  cache_service.pb.go  cache_service.pb.micro.go  cache_service.proto
protobuf/: BUILD.bazel  cache.proto
src/: cache_handler.go  main.go
