load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/johnbellone/cache-service
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/johnbellone/cache-service",
    visibility = ["//visibility:private"],
    deps = [
        "//cache:go_default_library",
        "//protobuf:go_default_library",
        "@com_github_micro_go_micro_v2//:go_default_library",
        "@com_github_micro_go_micro_v2//logger:go_default_library",
    ],
)

go_binary(
    name = "cache-service",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
